--- a/frontend/src/components/styles/TodoPage.css
+++ b/frontend/src/components/styles/TodoPage.css
@@ -1,7 +1,7 @@
 .main-page {
     /* TODO: add grid here */
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -16,7 +16,22 @@
 .card.todo{
     word-break: break-word;
 }
-
+.done{
+    background-color: #dcfbe0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(25, 231, 10);
+}
+.hidden{
+    background-color: #0c0d0d;
+}
+.hidden p{
+    color: #0c0d0d;
+}
+.cover{
+    position: relative;
+    z-index: -1;
+}
 .card button{
     min-height: 26px;
     height: 26px;
@@ -31,4 +46,12 @@
     display: flex;
     justify-content: right;
     margin-right: 1em;
+}
+
+.update{
+    background-color: #dcfbe0;
+    left: 0; 
+    right: 0; 
+
+    margin: 180px auto;
 }
