--- a/frontend/src/components/styles/TodoPage.css
+++ b/frontend/src/components/styles/TodoPage.css
@@ -4,6 +4,7 @@
     justify-content: start;
     align-items: center;
     flex-wrap: wrap;
+    margin: 0 0 50px 0;
 }
 .card{
     background-color: white;
@@ -12,6 +13,19 @@
     border-radius: 10px;
     min-width: 240px;
     max-width: 300px;
+}
+@media screen and (max-width:500px){
+    .main-page{
+        justify-content: center;
+    }
+    .card{
+        background-color: white;
+        margin: 1rem;
+        padding: 0.5em;
+        border-radius: 10px;
+        min-width: 180px;
+        max-width: 200px;
+    }
 }
 .card.todo{
     word-break: break-word;
