--- a/frontend/src/components/styles/TodoPage.css
+++ b/frontend/src/components/styles/TodoPage.css
@@ -31,7 +31,7 @@
     word-break: break-word;
 }
 .done{
-    background-color: #dcfbe0;
+    background-color: #CCEEBC;
     border-style: solid;
     border-width: 1px;
     border-color: rgb(25, 231, 10);
@@ -77,11 +77,27 @@
     }
     .card{
         background-color: white;
-        margin: 1rem;
+        margin: 1.5rem;
         padding: 0.5em;
         border-radius: 10px;
-        min-width: 180px;
-        max-width: 200px;
+        min-width: 240px;
+        max-width: 300px;
+    }
+    .card.todo{
+        word-break: break-word;
+    }
+    .done{
+        background-color: #CCEEBC;
+        border-style: solid;
+        border-width: 1px;
+        border-color: rgb(25, 231, 10);
+    }
+    .hidden{
+        background-color: #080909;
+        border: none;
+    }
+    .hidden p{
+        color: #080909;
     }
     .home-page{
         color: white;
