--- a/frontend/src/components/styles/TodoPage.css
+++ b/frontend/src/components/styles/TodoPage.css
@@ -31,7 +31,7 @@
     word-break: break-word;
 }
 .done{
-    background-color: #CCEEBC;
+    background-color: #dcfbe0;
     border-style: solid;
     border-width: 1px;
     border-color: rgb(25, 231, 10);
@@ -75,30 +75,7 @@
     .main-page{
         justify-content: center;
     }
-    .card{
-        background-color: white;
-        margin: 1rem;
-        padding: 0.5em;
-        border-radius: 10px;
-        min-width: 180px;
-        max-width: 200px;
-    }
-    .card.todo{
-        word-break: break-word;
-    }
-    .done{
-        background-color: #CCEEBC;
-        border-style: solid;
-        border-width: 1px;
-        border-color: rgb(25, 231, 10);
-    }
-    .hidden{
-        background-color: #080909;
-        border: none;
-    }
-    .hidden p{
-        color: #080909;
-    }
+
     .home-page{
         color: white;
         font-size: 2.5rem;
@@ -111,5 +88,29 @@
     .home-page-footer span{
         font-size: 1rem;
         color: white;
+    }
+    .card{
+        background-color: white;
+        margin: 1.5rem;
+        padding: 0.5em;
+        border-radius: 10px;
+        min-width: 240px;
+        max-width: 300px;
+    }
+    .card.todo{
+        word-break: break-word;
+    }
+    .done{
+        background-color: #dcfbe0;
+        border-style: solid;
+        border-width: 1px;
+        border-color: rgb(25, 231, 10);
+    }
+    .hidden{
+        background-color: #080909;
+        border: none;
+    }
+    .hidden p{
+        color: #080909;
     }
 }
